[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugbounty-cli"
version = "0.2.0"
description = "Autonomous Bug Bounty CLI Tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.40.0",
    "requests>=2.31.0",
]

[project.scripts]
bugbounty = "main:main"
